# ZorkPlusPlus

./: .clang-format  .gitignore  README.md  meson.build
.github/workflows/: build  cmake.yml  master_pr.yml
include/Zork.Core/: ANSICodes.hpp  App.hpp  Common.hpp  Exceptions.hpp
include/Zork.Core/Rendering/: IRenderer.hpp  StubRenderer.hpp
include/Zork.Core/Rendering/OpenGL/: OpenGLRenderer.hpp
meson/: ubuntu-x64.ini  win-x64.ini
scripts/: build_win-x64.bat  build_win-x64.sh  common.sh
scripts/ubuntu-x64/: 1_build.sh  2_test.sh  3_run.sh
scripts/win-x64/: 0_setup.sh  1_build.bat  1_build.sh  2_test.sh  3_run.sh
source/: meson.build
source/Zork.ConsoleApp/: GLFWWindowContext.hpp  main.cpp  meson.build
source/Zork.Core/: App.cpp  meson.build
source/Zork.Core/Rendering/OpenGL/: OpenGLRenderer.cpp
tests/: meson.build
tests/Zork.Core.Tests/: AppTests.cpp  meson.build
